--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Let Me 3D Print That For You</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Paste an STLFlix model link and get a custom 3D printing quote by email." />
+  <meta name="description" content="Paste a public 3D model link and get a custom 3D printing quote by email." />
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -22,7 +22,6 @@
           </div>
         </a>
 
-        <!-- Removed "How it works" link up top -->
         <div class="nav-right"></div>
       </div>
     </header>
@@ -31,9 +30,9 @@
       <div class="main-inner">
 
         <section class="hero">
-          <h1>Turn STLFlix models into real prints.</h1>
+          <h1>Turn STL Files into real prints.</h1>
           <p>
-            Paste a public <strong>STLFlix</strong> link. I’ll email you pricing, ETA, and any quick questions before printing.
+            Paste a public link, from the options below, and I’ll email you pricing, ETA, and any quick questions before printing.
           </p>
         </section>
 
@@ -59,7 +58,7 @@
             </button>
 
             <p class="small-note">
-              Need a model? Click “STLFlix model link” above to browse files.
+              Need a model? Click the source link above to browse files.
             </p>
           </form>
         </section>
@@ -68,7 +67,7 @@
           <div class="card list-card">
             <h2 class="section-title" style="margin-top:0;">How this works</h2>
             <ol>
-              <li>Find a model on STLFlix and copy the link.</li>
+              <li>Find a model on an approved library (STLFlix to start) and copy the link.</li>
               <li>Paste it here, then add your name/email on the next step.</li>
               <li>I’ll reply with a quote + ETA (and any questions) before printing.</li>
             </ol>
